--- a/Projects/Portfolio/Html/projects.html
+++ b/Projects/Portfolio/Html/projects.html
@@ -25,6 +25,27 @@
             <legend> HTML | CSS | JavaScript</legend>
 
             <div class="link"> 
+              Diployment Link : <a href="https://hritik-upadhyay.github.io/Google-Excel-Clone/"> Google Excel Clone </a>
+            </div>
+
+            <span> Google Excel Clone </span>
+
+            <div class="bullet-points">
+                <p> Developed a Google Excel Clone using HTML, CSS, and JavaScript. </p>
+                <p> Implemented core spreadsheet features, including cell editing and formatting (bold, italics, underline), and text alignment (center, right, left). </p>
+                <p> Enabled users to upload and download spreadsheet files in various formats. </p>
+                <p> Incorporated auto-saving functionality to ensure data integrity. </p>
+                <p> Designed a user-friendly interface with familiar menus and toolbars. </p>
+                <p> By utilizing HTML, CSS, and JavaScript, the clone offers a responsive and interactive interface. </p>
+                <p> Demonstrated expertise in data manipulation, event handling, and responsive web design. </p>
+            </div>
+
+          </fieldset>
+
+          <fieldset class="project-name box">
+            <legend> HTML | CSS | JavaScript</legend>
+
+            <div class="link"> 
               Diployment Link : <a href="https://hritik-upadhyay.github.io/Youtube-clone/"> Youtube Clone </a>
             </div>
 
