--- a/Projects/Portfolio/Html/skills.html
+++ b/Projects/Portfolio/Html/skills.html
@@ -19,89 +19,89 @@
             <div class="section-content">
                 <div class="tech">
                     <div class="techStackName"> Java </div>
-                    <ul>
-                        <li> Proficient in Java programming language and object-oriented programming (OOP) concepts. </li>
-                        <li> Extensive experience in solving over 300 data structures and algorithms (DSA) questions using Java. </li>
-                        <li> Good understanding and implementation of exception handling mechanisms and Enum Concepts in Java for robust error handling. </li>
-                        <li> Developed multiple projects in Java and its frameworks, showcasing practical application of OOP principles and Java libraries. </li>
-                        <li> Demonstrated expertise in utilizing Java frameworks like SpringBoot, Hibernate, or JPA to build efficient and scalable applications. </li>
-                        <li> Overall, possess a strong Java skill set with proficiency in DSA, OOP, exception handling, enum concept, and developing projects using Java and its frameworks. </li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p> Proficient in Java programming language and object-oriented programming (OOP) concepts. </p>
+                        <p> Extensive experience in solving over 300 data structures and algorithms (DSA) questions using Java. </p>
+                        <p> Good understanding and implementation of exception handling mechanisms and Enum Concepts in Java for robust error handling. </p>
+                        <p> Developed multiple projects in Java and its frameworks, showcasing practical application of OOP principles and Java libraries. </p>
+                        <p> Demonstrated expertise in utilizing Java frameworks like SpringBoot, Hibernate, or JPA to build efficient and scalable applications. </p>
+                        <p> Overall, possess a strong Java skill set with proficiency in DSA, OOP, exception handling, enum concept, and developing projects using Java and its frameworks. </p>
+                    </div>
                 </div>
                 <div class="tech">
                     <div class="techStackName"> OOPS </div>
-                    <ul>
-                        <li> Developed multiple projects using object-oriented programming (OOP) principles for effective code organization and reusability. </li>
-                        <li> Implemented inheritance, encapsulation, abstraction and polymorphism to design robust and modular applications.</li>
-                        <li> OOP promotes code organization, modularity, and reusability through the use of classes and objects. </li>
-                        <li> Implemented an e-commerce application using OOP, where classes such as Product, Cart, and Order were utilized to handle product listings, shopping cart functionality, and order processing. </li>
-                        <li> Overall, Object-Oriented Programming provides a powerful and flexible way to design and develop software systems by representing real-world entities </li>
-                        <li> Overall, the projects demonstrate proficiency in applying OOP principles to develop well-structured and maintainable applications in various domains. </li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p> Developed multiple projects using object-oriented programming (OOP) principles for effective code organization and reusability. </p>
+                        <p> Implemented inheritance, encapsulation, abstraction and polymorphism to design robust and modular applications.</p>
+                        <p> OOP promotes code organization, modularity, and reusability through the use of classes and objects. </p>
+                        <p> Implemented an e-commerce application using OOP, where classes such as Product, Cart, and Order were utilized to handle product listings, shopping cart functionality, and order processing. </p>
+                        <p> Overall, Object-Oriented Programming provides a powerful and flexible way to design and develop software systems by representing real-world entities </p>
+                        <p> Overall, the projects demonstrate proficiency in applying OOP principles to develop well-structured and maintainable applications in various domains. </p>
+                    </div>
                 </div>
                 <div class="tech">
                     <div class="techStackName"> Data Structure And Algorithm </div>
-                    <ul>
-                        <li> Proficient in various data structures, including arrays, linked lists, stacks, queues, trees.  </li>
-                        <li> Extensive problem-solving experience, having solved numerous coding problems utilizing different data structures. </li>
-                        <li> Skilled in analyzing time and space complexities of algorithms and data structures. Capable of selecting the appropriate data structure based on problem requirements. </li>
-                        <li> Experience in problem-solving across multiple domains, including arrays and strings, linked lists, trees and searching and sorting. </li>
-                        <li> Ability to provide efficient and optimized solutions to complex coding challenges. </li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p> Proficient in various data structures, including arrays, linked lists, stacks, queues, trees.  </p>
+                        <p> Extensive problem-solving experience, having solved numerous coding problems utilizing different data structures. </p>
+                        <p> Skilled in analyzing time and space complexities of algorithms and data structures. Capable of selecting the appropriate data structure based on problem requirements. </p>
+                        <p> Experience in problem-solving across multiple domains, including arrays and strings, linked lists, trees and searching and sorting. </p>
+                        <p> Ability to provide efficient and optimized solutions to complex coding challenges. </p>
+                    </div>
                 </div>
                 <div class="tech">
                     <div class="techStackName"> SpringBoot </div>
-                    <ul>
-                        <li> Developed multiple projects using Spring Boot, Java, and Object-Oriented Programming (OOP) principles. </li>
-                        <li> Implemented exception handling to ensure error handling and utilized Java's Enum concept to define constants and create custom data types for improved code readability. </li>
-                        <li> Implemented converters to handle data conversions between different types, such as converting DTOs (Data Transfer Objects) to entity objects and vice versa. </li>
-                        <li> Utilized DTOs to transfer data between different layers of the application, and maintain a clean architecture. </li>
-                        <li> Employed JPA (Java Persistence API) and ORM (Object-Relational Mapping) tools to facilitate database operations and simplify data persistence.</li>
-                        <li> Annotations provided by Spring and JPA to configure mappings between Java objects and database tables.</li>
-                        <li> Demonstrated expertise in building RESTful APIs using Spring Boot, allowing seamless communication between clients and the backend.</li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p> Developed multiple projects using Spring Boot, Java, and Object-Oriented Programming (OOP) principles. </p>
+                        <p> Implemented exception handling to ensure error handling and utilized Java's Enum concept to define constants and create custom data types for improved code readability. </p>
+                        <p> Implemented converters to handle data conversions between different types, such as converting DTOs (Data Transfer Objects) to entity objects and vice versa. </p>
+                        <p> Utilized DTOs to transfer data between different layers of the application, and maintain a clean architecture. </p>
+                        <p> Employed JPA (Java Persistence API) and ORM (Object-Relational Mapping) tools to facilitate database operations and simplify data persistence.</p>
+                        <p> Annotations provided by Spring and JPA to configure mappings between Java objects and database tables.</p>
+                        <p> Demonstrated expertise in building RESTful APIs using Spring Boot, allowing seamless communication between clients and the backend.</p>
+                    </div>
                 </div>
                 <div class="tech">
                     <div class="techStackName"> HTML </div>
-                    <ul>
-                        <li> Developed several small projects using HTML to showcase different features and functionalities. </li>
-                        <li> Employed semantic tags, such as header, nav, section, article, and footer, to enhance the accessibility and search engine optimization (SEO) of the projects. </li>
-                        <li> Utilized HTML tables to present tabular data in structured manner and HTML forms to capture user input.</li>
-                        <li> Utilized fieldset and legend tags to group related form elements and provide a clear structure to the form. </li>
-                        <li> Utilized CSS to style the projects, making them visually appealing and responsive across different devices and screen sizes. </li>
-                        <li> Focused on writing clean and well-structured HTML code, adhering to best practices and standards. </li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p> Developed several small projects using HTML to showcase different features and functionalities. </p>
+                        <p> Employed semantic tags, such as header, nav, section, article, and footer, to enhance the accessibility and search engine optimization (SEO) of the projects. </p>
+                        <p> Utilized HTML tables to present tabular data in structured manner and HTML forms to capture user input.</p>
+                        <p> Utilized fieldset and legend tags to group related form elements and provide a clear structure to the form. </p>
+                        <p> Utilized CSS to style the projects, making them visually appealing and responsive across different devices and screen sizes. </p>
+                        <p> Focused on writing clean and well-structured HTML code, adhering to best practices and standards. </p>
+                    </div>
                 </div>
                 <div class="tech">
                     <div class="techStackName"> CSS </div>
-                    <ul>
-                        <li> Developed several projects using CSS to showcase the power of flexbox, grid, and selectors. </li>
-                        <li> Utilized flexbox to create flexible and responsive layouts. </li>
-                        <li> Implemented grid layouts to achieve complex and structured designs, with control over rows and columns.</li>
-                        <li> Leveraged CSS selectors, including class selectors, ID selectors, and attribute selectors, to target and style specific elements. </li>
-                        <li> Focused on writing efficient and reusable CSS code, for best practices and maintaining a clean and organized structure. </li>
-                        <li> Created visually appealing designs by combining CSS properties, such as colors, backgrounds, borders, and , animations and transition.</li>
-                        <li> Developed projects with a focus on responsive design, ensuring proper display and layout across different devices and screen sizes.</li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p> Developed several projects using CSS to showcase the power of flexbox, grid, and selectors. </p>
+                        <p> Utilized flexbox to create flexible and responsive layouts. </p>
+                        <p> Implemented grid layouts to achieve complex and structured designs, with control over rows and columns.</p>
+                        <p> Leveraged CSS selectors, including class selectors, ID selectors, and attribute selectors, to target and style specific elements. </p>
+                        <p> Focused on writing efficient and reusable CSS code, for best practices and maintaining a clean and organized structure. </p>
+                        <p> Created visually appealing designs by combining CSS properties, such as colors, backgrounds, borders, and , animations and transition.</p>
+                        <p> Developed projects with a focus on responsive design, ensuring proper display and layout across different devices and screen sizes.</p>
+                    </div>
                 </div>
                 <div class="tech">
                     <div class="techStackName"> JavaScript </div>
-                    <ul>
-                        <li>  various JavaScript topics, including closures, promise objects, arrays, destructuring, the window object, and the 'this' keyword. </li>
-                        <li> In my portfolio, I have also developed a YouTube clone, which demonstrates my ability to create a web application that mimics the functionality of YouTube. It includes features like video playback, search, and user interactions. </li>
-                        <li> Furthermore, I have created an auction status application that fetches data from APIs. This showcases my skills in working with external data sources, handling asynchronous operations, and manipulating the DOM to display real-time auction information.</li>
-                        <li> Overall, my portfolio website demonstrates my proficiency in various JavaScript topics, as well as my ability to solve complex problems and create interactive web applications. </li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p>  various JavaScript topics, including closures, promise objects, arrays, destructuring, the window object, and the 'this' keyword. </p>
+                        <p> In my portfolio, I have also developed a YouTube clone, which demonstrates my ability to create a web application that mimics the functionality of YouTube. It includes features like video playback, search, and user interactions. </p>
+                        <p> Furthermore, I have created an auction status application that fetches data from APIs. This showcases my skills in working with external data sources, handling asynchronous operations, and manipulating the DOM to display real-time auction information.</p>
+                        <p> Overall, my portfolio website demonstrates my proficiency in various JavaScript topics, as well as my ability to solve complex problems and create interactive web applications. </p>
+                    </div>
                 </div>
                 <div class="tech">
                     <div class="techStackName"> MYSQL </div>
-                    <ul>
-                        <li> Developed multiple projects with MySQL as the database management system. </li>
-                        <li> Integrated MySQL databases into various projects, ranging from web applications to enterprise systems.</li>
-                        <li> Ensured data integrity and enforced constraints using MySQL's features, such as primary keys, foreign keys, and unique constraints.</li>
-                        <li> Leveraged the power of SQL to perform complex queries, joins, and aggregations for data analysis and reporting. </li>
-                        <li> Collaborated with other components of the application, such as frontend frameworks or backend APIs, to seamlessly interact with the MySQL database.</li>
-                    </ul>
+                    <div class="bullet-points">
+                        <p> Developed multiple projects with MySQL as the database management system. </p>
+                        <p> Integrated MySQL databases into various projects, ranging from web applications to enterprise systems.</p>
+                        <p> Ensured data integrity and enforced constraints using MySQL's features, such as primary keys, foreign keys, and unique constraints.</p>
+                        <p> Leveraged the power of SQL to perform complex queries, joins, and aggregations for data analysis and reporting. </p>
+                        <p> Collaborated with other components of the application, such as frontend frameworks or backend APIs, to seamlessly interact with the MySQL database.</p>
+                    </div>
                 </div>
             </div>
         </div>
