--- a/Contests/F3-Contest-1/index.html
+++ b/Contests/F3-Contest-1/index.html
@@ -18,7 +18,10 @@
             <img src="logo.png" alt="">
         </div>
         <div class="address">
-            <span> Your Current IP Address is </span>
+            <div class="ipAd">
+                <p> Your Current IP Address is  </p>
+                <p id="ipAddress">  </p>
+            </div>
             <button id="btn"> Get Started </button>
         </div>
     </div>
